Ajustes nos testes de saldo e saque